--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 flask = "^3.1.0"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.1.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
