--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_USER: your_db_user
       POSTGRES_PASSWORD: your_db_password
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
   flask-app:
     build:
@@ -23,6 +23,7 @@ services:
       - MINIO_SECRET_KEY=yoursecretkey
     depends_on:
       - minio
+      - db
     volumes:
       - .:/app
     networks:
@@ -31,15 +32,15 @@ services:
   minio:
     image: minio/minio
     container_name: minio
-    command: server /data
+    command: server /data --console-address ":9001"
     ports:
-      - "9000:9000"
-      - "9002:9001" # Для MinIO Console
+      - "9000:9000"  # Проброс порта 9000 для Web UI
+      - "9001:9001"  # Проброс порта 9001 для консоли MinIO (если используется)
     environment:
       MINIO_ROOT_USER: youraccesskey
       MINIO_ROOT_PASSWORD: yoursecretkey
     volumes:
-      - ./minio-data:/data
+      - minio-data:/data
     deploy:
       resources:
         limits:
@@ -53,5 +54,5 @@ networks:
     driver: bridge
 
 volumes:
-  postgres_data:  # Определяем том для PostgreSQL
-  minio_data:     # Определяем том для Minio
+  postgres-data:  # Определяем том для PostgreSQL
+  minio-data:     # Определяем том для Minio
