--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ flake8 = "^7.1.1"
 isort = "^6.0.0"
 minio = "^7.2.15"
 black = "^25.1.0"
+grep = "^0.3.2"
+pythonping = "^1.1.4"
 
 
 [build-system]
