--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,29 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: your_db_name
-      POSTGRES_USER: your_db_user
-      POSTGRES_PASSWORD: your_db_password
+      - POSTGRESQL_DATABASE=testops
+      - POSTGRESQL_USERNAME=testops
+      - ALLOW_EMPTY_PASSWORD=yes
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/data
 
   flask-app:
     image: nekit9896/testops-flask-app:v0.0.1
-    container_name: flask_app
+    container_name: testops-flask-app
     ports:
       - "5000:5000"
     environment:
       - FLASK_RUN_HOST=0.0.0.0
       - FLASK_ENV=development
+      # Переменные MinIO
       - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=youraccesskey
-      - MINIO_SECRET_KEY=yoursecretkey
+      - MINIO_ACCESS_KEY=
+      - MINIO_SECRET_KEY=
+      # Переменные PostgreSQL
+      - POSTGRESQL_HOST=db
+      - POSTGRESQL_PORT=5432
+      - POSTGRESQL_DATABASE=testops
+      - POSTGRESQL_USERNAME=testops
     depends_on:
       - minio
       - db
@@ -28,12 +34,12 @@ services:
       - minio-network
 
   minio:
-    image: minio/minio
+    image: minio/minio:RELEASE.2025-02-28T09-55-16Z-cpuv1
     container_name: minio
-    command: server /data --console-address ":9001"
+    command: server /data --console-address ":9006"
     ports:
-      - "9000:9000"  # Проброс порта 9000 для Web UI
-      - "9001:9001"  # Проброс порта 9001 для консоли MinIO (если используется)
+      - "9005:9005"  # Проброс порта 9000 для Web UI
+      - "9006:9006"  # Проброс порта 9001 для консоли MinIO (если используется)
     environment:
       MINIO_ROOT_USER: youraccesskey
       MINIO_ROOT_PASSWORD: yoursecretkey
@@ -42,7 +48,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
+          memory: 1024M
           cpus: "1.0"
     networks:
       - minio-network
@@ -52,5 +58,5 @@ networks:
     driver: bridge
 
 volumes:
-  postgres-data:  # Определяем том для PostgreSQL
-  minio-data:     # Определяем том для Minio
+  postgresql-data:  # Определяем том для PostgreSQL
+  minio-data:     # Определяем том для MinIO
