--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:13
+    image: bitnami/postgresql:17.0.0
     environment:
       - POSTGRESQL_DATABASE=testops
       - POSTGRESQL_USERNAME=testops
