--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,19 +2,19 @@
 name = "testops"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Vladimirov Nikita"]
 readme = "README.md"
 packages = [{include = "testops"}]
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "^3.10"
 flask = "^3.1.0"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.1.0"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
-flake8 = "^7.1.1"
-isort = "^6.0.0"
+flake8 = "^7.1.2"
+isort = "^6.0.1"
 minio = "^7.2.15"
 black = "^25.1.0"
 grep = "^0.3.2"
