--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
       - POSTGRESQL_USERNAME=testops
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
-      - postgresql-data:/data
+      - postgresql-data:/var/lib/postgresql/data
     networks:
       - minio-network
+    ports:
+      - "5432:5432"
 
   flask-app:
-    image: nekit9896/testops-flask-app:v0.0.2
+    image: nekit9896/testops-flask-app:v0.0.3
     container_name: testops-flask-app
     ports:
       - "5000:5000"
@@ -31,13 +33,6 @@ services:
     depends_on:
       - minio
       - db
-#    command: >
-#      bash -c "wait-for-it.sh db:5432 -- flask db upgrade && flask run --host=0.0.0.0"
-#    command: >
-#      bash -c "
-#      flask db upgrade &&
-#      flask run --host=0.0.0.0
-#      "
     networks:
       - minio-network
 
@@ -46,8 +41,8 @@ services:
     container_name: minio
     command: server /data --console-address ":9006"
     ports:
-      - "9005:9005"  # Проброс порта 9000 для Web UI
-      - "9006:9006"  # Проброс порта 9001 для консоли MinIO (если используется)
+      - "9005:9005"  # Проброс порта для Web UI
+      - "9006:9006"  # Проброс порта для консоли MinIO (если используется)
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
