--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,18 @@ packages = [{include = "testops"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-flask = "^3.1.0"
-flask-sqlalchemy = "^3.1.1"
-flask-migrate = "^4.1.0"
-python-dotenv = "^1.0.1"
-psycopg2-binary = "^2.9.10"
-flake8 = "^7.1.2"
-isort = "^6.0.1"
-minio = "^7.2.15"
-black = "^25.1.0"
-grep = "^0.3.2"
-pythonping = "^1.1.4"
-structlog = "^25.2.0"
+flask = "3.1.0"
+flask-sqlalchemy = "3.1.1"
+flask-migrate = "4.1.0"
+python-dotenv = "1.0.1"
+psycopg2-binary = "2.9.10"
+flake8 = "7.1.2"
+isort = "6.0.1"
+minio = "7.2.15"
+black = "25.1.0"
+grep = "0.3.2"
+pythonping = "1.1.4"
+structlog = "25.2.0"
 
 
 [build-system]
