--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "5433:5432"
 
   flask-app:
-    image: nekit9896/testops-flask-app:v0.1.0-mvp
+    image: nekit9896/testops-flask-app:v0.1.1
     container_name: testops-flask-app
     restart: always
     ports:
