--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: bitnami/postgresql:17.0.0
+    image: bitnamilegacy/postgresql:17.0.0
     restart: always
     environment:
       - POSTGRESQL_DATABASE=testops
@@ -14,7 +14,7 @@ services:
       - "5433:5432"
 
   flask-app:
-    image: nekit9896/testops-flask-app:v1.2.39
+    image: nekit9896/testops-flask-app:v1.2.48
     container_name: testops-flask-app
     restart: always
     ports:
